objects/Knowledge__kav.object
<CustomObject>
    <fields>
        <fullName>Article_Body__c</fullName>
        <description>Contains the detail of the knowledge article</description>
        <inlineHelpText>Contains the detail of the knowledge article</inlineHelpText>
        <label>Article Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_of_Policy_Adoption__c</fullName>
        <description>The date that the policy comes into place within the Council</description>
        <inlineHelpText>The date that the policy comes into place within the Council</inlineHelpText>
        <label>Date of Policy Adoption</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Files__c</fullName>
        <description>Files that are related or pertinent to this knowledge article.</description>
        <inlineHelpText>Files that are related or pertinent to this knowledge article.</inlineHelpText>
        <label>Related Files</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Responsible_Service_Area__c</fullName>
        <description>Which department within the council is responsible.</description>
        <inlineHelpText>Which department within the council is responsible.</inlineHelpText>
        <label>Responsible Service Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>ICT</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Customer Services</fullName>
                </value>
                <value>
                    <fullName>Community Services</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>Waste</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <label>Knowledge</label>
    <pluralLabel>Knowledge</pluralLabel>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>Represents a frequently asked question with a response that can be provided to customers.</description>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>How_To_Guide</fullName>
        <active>true</active>
        <description>A short guide for a user to perform one or more defined actions.</description>
        <label>How To Guide</label>
    </recordTypes>
    <recordTypes>
        <fullName>Policy</fullName>
        <active>true</active>
        <description>Council Policies, defined by formal documentation. Includes date of adoption.</description>
        <label>Policy</label>
    </recordTypes>
</CustomObject>